kustomize/base/caddy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-service
  labels:
    app: caddy  
spec:
  selector:
    app: caddy  
  ports:
  - name: http
    port: 80
