kustomize/base/caddy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy-ingress
  labels:
    app: caddy
spec:
  ingressClassName: nginx
  rules:
  - host: http://localhost/
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: caddy-service
            port:
              name: http
